--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -68,7 +68,20 @@ html,
 body {
   font-size: 16px;
   overflow-x: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.main-container {
+  height: 100%;
+  width: 100%;
 }
 
 .bg-purple {
@@ -121,8 +134,14 @@ body {
 .btn-primary:not(:disabled):not(.disabled):active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #4250f2;
-  border-color: #3645f1;
+  background-color: #727cf5;
+  border-color: #727cf5;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #7a72f5;
+  border-color: #7a72f5;
 }
 
 thead {
@@ -135,5 +154,46 @@ thead {
   th,
   td {
     border: none;
+  }
+}
+
+.table thead th,
+.table td {
+  vertical-align: middle;
+}
+
+.login-section {
+  min-width: 360px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
+textarea.form-control {
+  border: 1px solid #727cf5;
+  height: 100%;
+  overflow: auto;
+  resize: none;
+}
+
+.flex-none {
+  flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+  -moz-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  -o-flex: 0 0 auto;
+}
+
+.last-update-status {
+  font-size: 12px;
+  span {
+    line-height: 1;
+  }
+  .last-update-label {
+    color: #727cf5;
+    font-weight: bold;
   }
 }
