--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -285,12 +285,15 @@ textarea.form-control {
 }
 
 .dropdown-item.active,
-.dropdown-item:active {
-  background: none;
+.dropdown-item:active,
+.dropdown-item:hover {
+  background: #e8e9f9;
+  color: #16181b;
 }
 
 .dropdown-item {
   padding: 0.5rem 1.5rem;
+  cursor: pointer;
 }
 
 /************ Checklist starts here ************/
