Added logot btn nd chkd api. Rplcd anchr wid links

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -297,168 +297,11 @@ textarea.form-control {
   cursor: pointer;
 }
 
-/************ Checklist starts here ************/
-
-.checkbox-list-title {
-  font-family: "AvenirNext", Arial, sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #555555;
+.logout-btn{
+  &:hover,&:active,&:focus,&:active:focus{
+    box-shadow: none;
+    outline: none;
+  }
 }
 
-.form-check-label {
-  font-family: "AvenirNext", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #000000;
-}
 
-.span_pseudo,
-.form-check .form-check-span:before,
-.form-check .form-check-span:after {
-  content: "";
-  display: inline-block;
-  background: #fff;
-  width: 0;
-  height: 0.2rem;
-  position: absolute;
-  -webkit-transform-origin: 0% 0%;
-  -ms-transform-origin: 0% 0%;
-  -moz-transform-origin: 0% 0%;
-  -o-transform-origin: 0% 0%;
-  transform-origin: 0% 0%;
-}
-
-.form-check {
-  position: relative;
-  // height: 2rem;
-}
-
-.form-check.disabled input,
-.form-check.disabled .form-check-span {
-  color: #666666;
-  user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  pointer-events: none;
-  opacity: 0.7;
-}
-
-.form-check.disabled .form-check-label {
-  color: #666666;
-  user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  pointer-events: none;
-  opacity: 0.7;
-}
-
-.form-check input {
-  display: none;
-}
-
-.form-check input:checked ~ .form-check-span {
-  background-color: #727cf5;
-}
-
-.form-check input:checked ~ .form-check-span:before {
-  width: 13px;
-  height: 2.5px;
-  -webkit-transition: width 0.3s ease;
-  -moz-transition: width 0.3s ease;
-  -ms-transition: width 0.3s ease;
-  -o-transition: width 0.3s ease;
-  transition: width 0.3s ease;
-}
-
-.form-check input:checked ~ .form-check-span:after {
-  width: 7px;
-  height: 2.5px;
-  -webkit-transition: width 0.2s ease;
-  -moz-transition: width 0.2s ease;
-  -ms-transition: width 0.2s ease;
-  -o-transition: width 0.2s ease;
-  transition: width 0.2s ease;
-}
-
-.form-check input:disabled ~ .form-check-span {
-  background: #ececec;
-  border-color: #dcdcdc;
-}
-
-.form-check input:disabled ~ label:not(.form-check-span) {
-  color: #dcdcdc;
-}
-
-.form-check input:disabled ~ label:not(.form-check-span):hover {
-  cursor: default;
-}
-
-.form-check-label {
-  cursor: pointer;
-  // height: 24px;
-  margin-bottom: 0;
-  /* padding-left: 16px; */
-  left: 5px;
-  position: relative;
-  z-index: 2;
-  cursor: pointer;
-  width: 100%;
-}
-
-.form-check input:checked ~ .form-check-span {
-  border: none;
-  height: 20px;
-  width: 20px;
-}
-
-.form-check .form-check-span {
-  border: 2px solid #ccc;
-  box-sizing: content-box;
-  display: inline-block;
-  height: 16px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  transition: all 0.2s;
-  width: 16px;
-  z-index: 1;
-  cursor: pointer;
-  margin-bottom: 0;
-}
-
-.form-check .form-check-span:before {
-  -ms-transform: rotate(-55deg);
-  -o-transform: rotate(-55deg);
-  -webkit-transform: rotate(-55deg);
-  transform: rotate(-55deg);
-  -moz-transform: rotate(-55deg);
-  top: 15px;
-  left: 8px;
-}
-
-.form-check .form-check-span:after {
-  -ms-transform: rotate(35deg);
-  -o-transform: rotate(35deg);
-  -webkit-transform: rotate(35deg);
-  transform: rotate(35deg);
-  -moz-transform: rotate(35deg);
-  bottom: 7px;
-  left: 5px;
-}
-
-.form-check + .form-check {
-  margin-top: 10px;
-}
-
-/************ Checklist ends here ************/
